--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/arunsaras/Dummy#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "fcc-express-background": "^0.0.2",
     "install": "^0.13.0",
     "nodemon": "^2.0.12"
   }
